--- a/bookstore-app/frontend/package.json
+++ b/bookstore-app/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18"
